Remove HTTP options ALPN version field.
Motivation:

HTTP options classes define a List<HttpVersion> as ALPN versions to use.

Since the encapsulation of SSL options in SSLOptions, the HTTP options ALPN field mirrors the state of the underlying nested SSL options field.

Updating HTTP ALPN fields is not correlated to the nested ALPN generic field and thus the TCP client/server code needs to calculate it to reflect it.

Changes:

Remove the HTTP options ALPN version field and make the getter/setter delegate to the SSL options generic ALPN field.